--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Lotte</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Website.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">Get To Know me</a>
       </div>
     </div>
   </header>
@@ -65,9 +65,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Get to know me</h2>
+          <p class="text-white-50">My name is Lotte Rombaut. I study MCT at Howest in Belguim. More personal information can be found on <a href="http://lotterombaut.be/Portfolio/interesses/">my portfolio webpage</a>. Hope you take a look.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
