--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Get to know me</h2>
-          <p class="text-white-50">My name is Lotte Rombaut. I study MCT at Howest in Belguim. More personal information can be found on <a href="http://lotterombaut.be/Portfolio/interesses/">my portfolio webpage</a>. Hope you take a look.</p>
+          <p class="text-white-50">My name is Lotte Rombaut. I study MCT at Howest in Belgium. More personal information can be found on <a href="http://lotterombaut.be/Portfolio/interesses/">my portfolio webpage</a>. Hope you take a look.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
