--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p class="text-white-50">My name is Lotte Rombaut. I study MCT at Howest in Belgium. More personal information can be found on <a href="http://lotterombaut.be/Portfolio/interesses/">my portfolio webpage</a>. Hope you take a look.</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/me.png" class="img-fluid" alt="">
     </div>
   </section>
 
